# vuer-message-protocol

./: .editorconfig  .gitignore  README.md
notes/: CODE_EXAMPLES.md  IMPLEMENTATION_GUIDE.md  PROTOCOL_ANALYSIS.md  old_README.md
vmp-py/: .gitignore  pyproject.toml
vmp-py/examples/: basic_usage.py  registry_extensions.py
vmp-py/src/vmp_py/: events.py  serializers.py
vmp-py/src/vmp_py/extensions/: __init__.py
vmp-py/src/vuer_vrpc/: __init__.py  type_registry.py
vmp-py/src/vuer_vrpc/extensions/: safetensors_support.py
vmp-py/tests/: test_events.py  test_extensions.py  test_serializers.py  test_types.py  test_zdata.py
vmp-ts/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
vmp-ts/src/: index.ts  react.tsx  rpc.test.ts  serializer.ts  types.ts  zdata.ts
vrpc-py/: README.md  pyproject.toml
vrpc-py/examples/: basic_usage.py  registry_extensions.py
vrpc-py/src/vuer_rpc/: builtin_types.py
vrpc-py/src/vuer_rpc/extensions/: image_support.py  safetensors_support.py  torch_support.py
vrpc-py/src/vuer_vrpc/: types.py  zdata.py
vrpc-py/src/vuer_vrpc/extensions/: image_support.py  torch_support.py
vrpc-py/tests/: __init__.py  test_events.py  test_extensions.py  test_serializers.py  test_types.py  test_zdata.py
vrpc-rs/: .gitignore  Cargo.toml  README.md  SUMMARY.md
vrpc-rs/examples/: basic_messages.rs
vrpc-rs/src/: builtin_types.rs  deserializer.rs  error.rs  lib.rs  rpc.rs  serializer.rs  type_registry.rs  types.rs  zdata.rs
vrpc-swift/: .gitignore  Package.swift  README.md
vrpc-swift/Sources/VuerRPC/: AnyCodable.swift  Errors.swift  RPC.swift  Serialization.swift  TypeRegistry.swift  Types.swift  VuerRPC.swift  ZData.swift
vrpc-swift/Tests/VuerRPCTests/: VuerRPCTests.swift
vrpc-ts/: README.md  TYPE_CONVERSION.md  package.json
vrpc-ts/examples/: basic.ts  typed-arrays.ts
vrpc-ts/src/: builtin_types.ts  deserializer.ts  rpc.ts  serializer.test.ts  type_registry.ts  zdata.test.ts
